modualrize repository database

--- a/app/src/main/res/layout/fragment_goal_detail.xml
+++ b/app/src/main/res/layout/fragment_goal_detail.xml
@@ -6,12 +6,12 @@
     <data>
         <variable
             name="goal"
-            type="com.ovrbach.qapitalchallenge.data.entity.Goal"/>
+            type="com.ovrbach.qapitalchallenge.common.entity.Goal"/>
         <variable
             name="sum"
             type="Float"/>
         <import type="com.ovrbach.qapitalchallenge.util.BindingUtilsKt"/>
-        <import type="com.ovrbach.qapitalchallenge.util.DateUtilsKt"/>
+        <import type="com.ovrbach.qapitalchallenge.common.logic.DateUtilsKt"/>
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
