--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="item"
-            type="com.ovrbach.qapitalchallenge.data.entity.Goal"/>
+            type="com.ovrbach.qapitalchallenge.common.entity.Goal"/>
     </data>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
