--- a/app/src/main/res/layout/fragment_goal_list.xml
+++ b/app/src/main/res/layout/fragment_goal_list.xml
@@ -28,6 +28,5 @@
 
     <TextView
         android:id="@+id/goals_error"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        style="@style/AppTheme.Widget.TextView.Error"/>
 </LinearLayout>
