--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,15 @@
         <item name="android:textColor">@color/red</item>
     </style>
 
+    <style name="AppTheme.Widget"/>
+
+    <style name="AppTheme.Widget.TextView"/>
+
+    <style name="AppTheme.Widget.TextView.Error">
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Headline6</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
 </resources>
