--- a/app/src/main/res/layout/fragment_goal_detail.xml
+++ b/app/src/main/res/layout/fragment_goal_detail.xml
@@ -34,6 +34,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="208dp"
                     android:scaleType="centerCrop"
+                    android:id="@+id/imageView"
+                    android:transitionName="@string/transition_goal"
                     app:foreground="@drawable/gradient_scrim_dark"
                     app:imageUrl="@{goal.goalImageURL}"
                     app:layout_collapseMode="parallax"
@@ -86,7 +88,6 @@
                 </androidx.appcompat.widget.Toolbar>
 
                 <ImageView
-                    app:layout_collapseMode="pin"
                     android:id="@+id/home"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -94,6 +95,7 @@
                     android:contentDescription="@null"
                     android:src="@drawable/abc_ic_ab_back_material"
                     android:tint="?android:attr/textColorPrimaryInverse"
+                    app:layout_collapseMode="pin"
                     tools:ignore="PrivateResource"/>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -139,11 +141,11 @@
         </FrameLayout>
 
         <TextView
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            android:gravity="center"
             android:id="@+id/detail_error"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
